corrección de enlaces

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         
         <link rel="shortcut icon" href="../Assets/imagenes/favicon.ico">
-        <link rel="stylesheet" href="../CSS/estilo.css">
+        <link rel="stylesheet" href="./CSS/estilo.css">
         <script src="./js/validacion.js"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,10 +33,10 @@
             <img class="img__foto" src="./Assets/imagenes/fotoMFC.png" alt="Marcelo Fabio Campisi">
         </div>
         <nav class="cajaNav">
-                <a href="..#acerca" class="navtext">Acerca de mí</a> 
-                <a href="..#antecedentes" class="navtext">Antecedentes Laborales</a> 
-                <a href="..#formacion" class="navtext">Formación Académica</a>
-                <a href="..#contacto" class="navtext">Contacto</a> 
+                <a href=".#acerca" class="navtext">Acerca de mí</a> 
+                <a href=".#antecedentes" class="navtext">Antecedentes Laborales</a> 
+                <a href=".#formacion" class="navtext">Formación Académica</a>
+                <a href=".#contacto" class="navtext">Contacto</a> 
         </nav>
         <div class="cajaSocial">
                 <a href="#" target="_blank"><i class="fa-brands fa-facebook-f itemSocial"></i></i></a>
