--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta property="og:site_name" content="MFC" />
 
         
-        <link rel="shortcut icon" href="../Assets/imagenes/favicon.ico">
+        <link rel="shortcut icon" href="./Assets/imagenes/favicon.ico">
         <link rel="stylesheet" href="./CSS/estilo.css">
         <script src="./js/validacion.js"></script>
 
@@ -104,7 +104,7 @@
         </section>
         <section class="formacion" id="formacion">
             <div class="fotoFormacion">
-                <img src="/Assets/imagenes/libreria.jpg" alt="Formación académica">
+                <img src="./Assets/imagenes/libreria.jpg" alt="Formación académica">
             </div>
 
             <div class="formacionDos">
